# 112_1-QDA_Final

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  QAOA.py  README.md  requirements.txt  test.txt
VQE/: main.py
VQE/VQE_result/: VQE_result.txt  VQE_result_SliQSim.txt  test3.txt  test4.txt  vqe_compare1.txt  vqe_compare2.txt
VQE/training_data/: test.txt  test2.txt
cudd/: Makefile  config.status  libtool
cudd/autom4te.cache/: requests
cudd/cplusplus/.deps/: cudd_libcudd_la-cuddObj.Plo
cudd/cudd/.deps/: cudd_libcudd_la-cuddAPI.Plo  cudd_libcudd_la-cuddAddAbs.Plo  cudd_libcudd_la-cuddAddApply.Plo  cudd_libcudd_la-cuddAddFind.Plo  cudd_libcudd_la-cuddAddInv.Plo  cudd_libcudd_la-cuddAddIte.Plo  cudd_libcudd_la-cuddAddNeg.Plo  cudd_libcudd_la-cuddAddWalsh.Plo  cudd_libcudd_la-cuddAndAbs.Plo  cudd_libcudd_la-cuddAnneal.Plo  cudd_libcudd_la-cuddApa.Plo  (+50 more)
cudd/doc/: cudd.aux  cudd.ilg
docs/: G04_BDD-Based_Quantum_Circuit_Simulation_Slides.pptx  fadeout.py  reverse.py
gridsynth_precompile/: gridsynth_1024.data  gridsynth_128.data  gridsynth_16.data  gridsynth_256.data  gridsynth_32.data  gridsynth_4.data  gridsynth_512.data  gridsynth_64.data  gridsynth_8.data
misc_util/: ddsim_ex.py  gridsynth.py  test_sim_speed.py  testcase_generator.py  testcase_generator2.py
rus/: rusSyn
rus/rus-1.2/: tcount.h
src/: Simulation.cpp  Simulator.h  gates.cpp  main.cpp  measurement.cpp  misc.cpp  util_sim.cpp  util_sim.h
tests/: bell_state_rus.qasm  example_c.qasm  example_testf8.qasm  exp2.qasm  gen_tests.py  no_transpile.qasm  report_test_2.qasm  res.qasm
(+28 files in other folders)
